[package]
name = "sacc"
version = "0.1.1"
edition = "2021"

[features]
default = ["x86_64", "aarch64", "armv7"]
x86_64 = ["iced-x86"]
aarch64 = []
armv7 = []

[dependencies]
logos = "0.12.0"
termcolor = "1.1.2"
elsa = "1.6.0"
typed-arena = "2.0.1"
pathdiff = "0.2.1"

[dependencies.iced-x86]
version = "1.15.0"
default-features = false
optional = true
features = ["std", "block_encoder", "fast_fmt", "intel", "code_asm", "instr_info", "op_code_info"]
